# cmangos-achievements

./: .gitignore  CMakeLists.txt  README.md  achievementspch.cpp  achievementspch.h
sql/install/world/: 01_world_data.sql  02_world_update.sql  03_world_locales.sql
sql/uninstall/characters/: characters.sql
sql/uninstall/world/: world.sql
src/: AchievementMgr.cpp  AchievementMgr.h  AchievementScriptMgr.cpp  AchievementScriptMgr.h  AchievementsConfig.cpp  AchievementsConfig.h  AchievementsMgr.cpp  AchievementsMgr.h  AchievementsModule.cpp  AchievementsModule.h  AchievementsModuleConfig.cpp  AchievementsModuleConfig.h  achievement_scripts.cpp  achievements.conf.dist.in  achievementspch.h
